Update and rename Practice week 5 .Rmd to MULTIPLE LINEAR REGRESSION.Rmd

--- a/MULTIPLE LINEAR REGRESSION.Rmd
+++ b/MULTIPLE LINEAR REGRESSION.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "Practice Week 5"
-author: "Deena"
+title: "MULTIPLE LINEAR REGRESSION"
+author: "Sophie"
 date: "03/02/2020"
 output:
   word_document: default
